TWINS-836: twin link load pattern migration